# rust-grpc-sample01

./: buf.gen.yaml
infrastructure/: Makefile  docker-compose.yml
infrastructure/docker/rust/: Dockerfile
proto/greet/v1/: greet.proto
proto/todo/v1/: todo.proto
proto/user/v1/: user.proto
server/: .env.example  .gitignore  Cargo.toml
server/migrations/: 20230408184449_create_user_table.sql  20230420071437_create_todo_table.sql  20230421075339_create_comment_table.sql
server/src/: gen.rs  main.rs  service.rs
server/src/app_error/: error.rs
server/src/domain/: model.rs  repository.rs
server/src/domain/model/: comment.rs  todo.rs  user.rs
server/src/domain/repository/: db_conn.rs  todo.rs  user.rs
server/src/infrastructure/persistence/: todo.rs  user.rs
server/src/interceptor/: logger.rs
server/src/service/: greet.rs  todo.rs  user.rs
server/src/usecase/: todo.rs  user.rs
server/src/util/: datetime.rs
