[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
serde = "1.0.155"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "macros", "sync", "signal", "full"] }
tonic = "0.9.1"
tonic-web = "0.9.1"
tower-http = { version = "0.3.5", features = ["cors"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.24"
pbjson = "0.5.1"
anyhow = "1.0.70"
async-trait = "0.1.68"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
error = "0.1.9"
thiserror = "1.0.40"
sqlx = { version = "0.5.9", features = ["mysql", "runtime-tokio-rustls"] }
tower = "0.4.13"
tracing = "0.1.37"
futures = "0.3.28"
tracing-subscriber = "0.3.16"
http = "0.2.9"
hyper = "0.14.26"
tracing-futures = "0.2.5"

[build-dependencies]
tonic-build = "0.8.4"

